made everything work for sprint 2, need to add character viewer as an extra

--- a/DnD_Between.wpf/character_form.xaml
+++ b/DnD_Between.wpf/character_form.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DnD_Between.wpf.character"
+﻿<Window x:Class="DnD_Between.wpf.character_form"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
         <Button x:Name="BTNSave" Content="Save" HorizontalAlignment="Left" Margin="66
                 ,369,0,0" VerticalAlignment="Top" Height="23" Width="77" Click="BTNSave_Click"/>
         <Label Content="Name :" HorizontalAlignment="Left" Margin="66,27,0,0" VerticalAlignment="Top" Height="27"/>
-        <TextBox x:Name="TBName" HorizontalAlignment="Left" Margin="151,27,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="27"/>
+        <TextBox x:Name="TBName" HorizontalAlignment="Left" Margin="151,27,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="249" Height="27" FontSize="20"/>
         <Rectangle HorizontalAlignment="Left" Height="170" Margin="66
                    ,182,0,0" Stroke="Black" VerticalAlignment="Top" Width="280"/>
         <Label Content="Stats :" HorizontalAlignment="Left" Margin="66
@@ -29,13 +29,13 @@
         <TextBox x:Name="TBCha" HorizontalAlignment="Left" Margin="261,267,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" Height="28" TextAlignment="Center" FontSize="20"/>
         <Button x:Name="BTNUpdate" Content="Update" HorizontalAlignment="Left" Margin="170,369,0,0" VerticalAlignment="Top" Height="23" Width="76" Click="BTNUpdate_Click"/>
         <Button x:Name="BTNDel" Content="Delete" HorizontalAlignment="Left" Margin="271,369,0,0" VerticalAlignment="Top" Height="23" Width="77" Click="BTNDel_Click"/>
-        <ComboBox x:Name="CMBClass" HorizontalAlignment="Left" Margin="151,59,0,0" VerticalAlignment="Top" Width="120" Height="27"/>
+        <ComboBox x:Name="CMBClass" HorizontalAlignment="Left" Margin="151,59,0,0" VerticalAlignment="Top" DisplayMemberPath="name" SelectedValuePath="ID" Width="120" Height="27"/>
         <Label HorizontalAlignment="Left" Margin="66,59,0,0" VerticalAlignment="Top" Height="27" Content="Class :"/>
         <ComboBox x:Name="CMBLvl" HorizontalAlignment="Left" Margin="609,59,0,0" VerticalAlignment="Top" Width="63" Height="27"/>
         <Label HorizontalAlignment="Left" Margin="525,59,0,0" VerticalAlignment="Top" Height="27" Content="Level :"/>
         <ComboBox x:Name="CMBSpeed" HorizontalAlignment="Left" Margin="609,91,0,0" VerticalAlignment="Top" Width="63" Height="27"/>
         <Label HorizontalAlignment="Left" Margin="525,91,0,0" VerticalAlignment="Top" Height="27" Content="Speed :"/>
-        <ComboBox x:Name="CMBRace" HorizontalAlignment="Left" Margin="151,91,0,0" VerticalAlignment="Top" Width="120" Height="27                   "/>
+        <ComboBox x:Name="CMBRace" HorizontalAlignment="Left" Margin="151,91,0,0" VerticalAlignment="Top" DisplayMemberPath="name" SelectedValuePath="ID" Width="120" Height="27                   "/>
         <Label HorizontalAlignment="Left" Margin="66,91,0,0" VerticalAlignment="Top" Height="27" Content="Race :"/>
 
     </Grid>
