--- a/DnD_Between.wpf/MainWindow.xaml
+++ b/DnD_Between.wpf/MainWindow.xaml
@@ -7,17 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="dgchar" SelectionChanged="dgchar_SelectionChanged" HorizontalAlignment="Left" Width="621" AutoGenerateColumns="False">
+        <DataGrid x:Name="dgchar" SelectionChanged="dgchar_SelectionChanged" AutoGenerateColumns="False" HorizontalAlignment="Left" Width="621">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Width="150" Binding="{Binding name}"/>
+                <DataGridTextColumn Header="Name" Width="250" Binding="{Binding name}"/>
                 <DataGridTextColumn Header="Level" Width="50" Binding="{Binding level}"/>
-                <DataGridTextColumn Header="Class" Width="100" Binding="{Binding char_class.name}"/>
-                <DataGridTextColumn Header="Race" Width="100" Binding="{Binding char_race.name}"/>
+                <DataGridTextColumn Header="Class" Width="150" Binding="{Binding char_class.name}"/>
+                <DataGridTextColumn Header="Race" Width="163" Binding="{Binding char_race.name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="BTNCreate" Content="Create" Margin="0,10,10,0" Click="BTNCreate_Click" HorizontalAlignment="Right" Width="139" Height="63" VerticalAlignment="Top"/>
-        <Button x:Name="BTNCreate_Copy" Content="Create" Margin="0,10,10,0" Click="BTNCreate_Click" HorizontalAlignment="Right" Width="139" Height="63" VerticalAlignment="Top"/>
-        <Button x:Name="BTNEdit" Content="Edit" HorizontalAlignment="Right" Margin="0,220,10,0" VerticalAlignment="Top" Height="51" Width="139" Click="BTNEdit_Click"/>
+        <Button x:Name="BTNCreate" Content="Create" Margin="0,10,10,0" Click="BTNCreate_Click" HorizontalAlignment="Right" Width="150" Height="75" VerticalAlignment="Top"/>
+        <Button x:Name="BTNEdit" Content="Edit" Margin="0,102,10,0" Click="BTNEdit_Click" Height="77" VerticalAlignment="Top" HorizontalAlignment="Right" Width="150"/>
 
     </Grid>
 </Window>
