--- a/DnD_Between.wpf/Character_viewer.xaml
+++ b/DnD_Between.wpf/Character_viewer.xaml
@@ -7,20 +7,30 @@
         mc:Ignorable="d"
         Title="Character_viewer" Height="850" Width="1000" Top="0" Left="275">
     <Grid>
-        <Label x:Name="LBName" Content="Name" HorizontalAlignment="Left" Margin="50,50,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="Strength" HorizontalAlignment="Left" Margin="50,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
-        <Label Content="Dexterity" HorizontalAlignment="Left" Margin="150,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
-        <Label Content="Constitution" HorizontalAlignment="Left" Margin="250,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="125" HorizontalContentAlignment="Center"/>
-        <Label Content="Intelegence" HorizontalAlignment="Left" Margin="375,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="125" HorizontalContentAlignment="Center"/>
-        <Label Content="Wisdom" HorizontalAlignment="Left" Margin="500,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
-        <Label Content="Charisma" HorizontalAlignment="Left" Margin="600,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
-        <Label Content="Walking" HorizontalAlignment="Left" Margin="750,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBSTR" Content="20" HorizontalAlignment="Left" Margin="50,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBDEX" Content="20" HorizontalAlignment="Left" Margin="150,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBCON" Content="20" HorizontalAlignment="Left" Margin="262,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBWIS" Content="20" HorizontalAlignment="Left" Margin="500,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBINT" Content="20" HorizontalAlignment="Left" Margin="388,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBCHA" Content="20" HorizontalAlignment="Left" Margin="600,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
-        <Label x:Name="LBSpeed" Content="20" HorizontalAlignment="Left" Margin="750,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBName" Content="Name" HorizontalAlignment="Left" Margin="50,50,0,0" VerticalAlignment="Top" FontSize="20" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label x:Name="LBRACE" Content="Bugbear" HorizontalAlignment="Left" Margin="600,50,0,0" VerticalAlignment="Top" FontSize="20" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label x:Name="LBCLASS" Content="Paladin" HorizontalAlignment="Left" Margin="750,50,0,0" VerticalAlignment="Top" FontSize="20" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label x:Name="LBLVL" Content="Level 15" HorizontalAlignment="Left" Margin="500,50,0,0" VerticalAlignment="Top" FontSize="20" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="STRENGTH" HorizontalAlignment="Left" Margin="50,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="DEXTERITY" HorizontalAlignment="Left" Margin="150,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="CONSTITUTION" HorizontalAlignment="Left" Margin="250,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="135" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="INTELLIGENCE" HorizontalAlignment="Left" Margin="375,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="125" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="WISDOM" HorizontalAlignment="Left" Margin="500,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="CHARISMA" HorizontalAlignment="Left" Margin="600,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label Content="WALKING" HorizontalAlignment="Left" Margin="750,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center" FontWeight="Bold"/>
+        <Label x:Name="LBSTRMOD" Content="+2" HorizontalAlignment="Left" Margin="50,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBDEXMOD" Content="+2" HorizontalAlignment="Left" Margin="150,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCONMOD" Content="+2" HorizontalAlignment="Left" Margin="262,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBWISMOD" Content="+2" HorizontalAlignment="Left" Margin="500,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBINTMOD" Content="+2" HorizontalAlignment="Left" Margin="388,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCHAMOD" Content="+2" HorizontalAlignment="Left" Margin="600,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBSpeed" Content="30" HorizontalAlignment="Left" Margin="750,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBSTR" Content="20" HorizontalAlignment="Left" Margin="50,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBDEX" Content="20" HorizontalAlignment="Left" Margin="150,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCON" Content="20" HorizontalAlignment="Left" Margin="262,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBINT" Content="20" HorizontalAlignment="Left" Margin="388,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBWIS" Content="20" HorizontalAlignment="Left" Margin="500,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCHA" Content="20" HorizontalAlignment="Left" Margin="600,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LB" Content="SPEED" HorizontalAlignment="Left" Margin="750,172,0,0" VerticalAlignment="Top" FontSize="12" Width="100" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
